# agents-md-generator

./: .agents-config.example.json  .agents-config.json  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PLAN-agents-md-generator.md  README.md  publish.sh  pyproject.toml  run.py  server.json  smithery.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: aggregator.md  ast_analyzer.md  build_system.md  cache.md  change_detector.md  config.md  context_builder.md  flow.md  gitignore.md  instructions.md  languages.md  models.md  project_scanner.md  server.md  symbol_utils.md
openspec/: config.yaml
openspec/changes/archive/2026-03-28-architectural-distillation/: design.md  proposal.md  (+1 more)
openspec/changes/fix-aggregator-pattern/: proposal.md  tasks.md
openspec/specs/heuristics/: spec.md
openspec/specs/payload/: spec.md
src/agents_md_mcp/: __init__.py  aggregator.py  ast_analyzer.py  build_system.py  cache.py  change_detector.py  config.py  connectors.py  context_builder.py  gitignore.py  instructions.py  models.py  path_utils.py  project_scanner.py  server.py  setup_wizard.py  symbol_utils.py
src/agents_md_mcp/languages/: __init__.py  base.py  csharp.py  go.py  python.py  typescript.py
tests/: test_ast_analyzer.py  test_boilerplate.py  test_cache.py  test_change_detector.py  test_config.py  test_connectors.py  test_context_builder.py  test_distillation.py  test_gitignore.py  test_payload_order.py  test_server.py  test_symbol_utils.py
tests/fixtures/: sample.cs  sample.go  sample.py  sample.ts
(+1 files in other folders)
