[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-md-generator"
version = "0.3.4"
description = "MCP server that analyzes codebases and generates AGENTS.md files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pathspec>=0.12.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/nushey/agents-md-generator"
Source = "https://github.com/nushey/agents-md-generator"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
agents-md-generator = "agents_md_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_md_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
